Fixed some minor layout bugs

--- a/app/stylesheets/_footer.sass
+++ b/app/stylesheets/_footer.sass
@@ -6,9 +6,10 @@
     color: #FFF
     text-decoration: none
     
-  height: 20px
+  height: 80px
+  line-height: 80px
+  padding: 0 20px
   background: #2d2d2d
-  padding: 30px
   font-size: 12px
   color: #FFF
   font-weight: bold
