--- a/app/stylesheets/content/_admin.sass
+++ b/app/stylesheets/content/_admin.sass
@@ -1,6 +1,8 @@
 #wrapper
   &.admin
-    width: 90% !important
+    #content
+      width: 100%
+    width: 1100px !important
     overflow: hidden
     .panel
       float: left
