--- a/app/stylesheets/content/_main.sass
+++ b/app/stylesheets/content/_main.sass
@@ -1,28 +1,27 @@
 #wrapper
-  #main
+  overflow: hidden
+  #side
+    float: left
+    width: 250px
+    color: #777
+    #blog_title
+      color: #00ADEC
+  #content
+    width: 600px
     overflow: hidden
-    #side
-      float: left
-      width: 250px
-      color: #777
-      #blog_title
-        color: #00ADEC
-    #content
-      width: 600px
+    margin-right: 50px
+    float: left
+    strong
+      color: $green
+    h3
+      font-size: 18pt
+      font-weight: normal
+      text-align: center
+      text-shadow: 1px 1px 1px #CCC
+      margin: 10px
+    .box
+      @include rounded(10px)
+      background-color: #F5F5F5
+      padding: 10px
       overflow: hidden
-      margin-right: 50px
-      float: left
-      strong
-        color: $green
-      h3
-        font-size: 18pt
-        font-weight: normal
-        text-align: center
-        text-shadow: 1px 1px 1px #CCC
-        margin: 10px
-      .box
-        @include rounded(10px)
-        background-color: #F5F5F5
-        padding: 10px
-        overflow: hidden
-        margin: 0 0 40px 0
+      margin: 0 0 40px 0
